force-app/main/default/objects/Sample_Lab_Request__c/Sample_Lab_Request__c.object-meta.xml
<CustomObject>
    <label>Sample/Drawdown Requests</label>
    <nameField>
        <displayFormat>SLR-{00000000}</displayFormat>
        <label>Sample/Lab Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample/Drawdown Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>