force-app/main/default/objects/Sample_Lab_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street__c &amp; BR() &amp; City__c &amp; &quot;, &quot; &amp; State__c &amp; 
BR() &amp; Country__c &amp; &quot; &quot; &amp; Zip_Code__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>