force-app/main/default/objects/Sample_Lab_Request__c/fields/Attention_Name__c.field-meta.xml
<CustomField>
    <fullName>Attention_Name__c</fullName>
    <formula>Attention_To__r.FirstName &amp; &quot; &quot; &amp; Attention_To__r.LastName</formula>
    <label>Attention Name</label>
    <type>Text</type>
</CustomField>