force-app/main/default/objects/Sample_Lab_Request__c/fields/Attention_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attention_Phone__c</fullName>
    <formula>Attention_To__r.Phone</formula>
    <label>Attention Phone</label>
    <type>Text</type>
</CustomField>