force-app/main/default/objects/Sample_Lab_Request__c/fields/Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Attention_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account Team will also be notified.</inlineHelpText>
    <label>Additional FLEXcon Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Lab_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>