force-app/main/default/objects/Sample_Lab_Request__c/fields/C_I_F__c.field-meta.xml
<CustomField>
    <fullName>C_I_F__c</fullName>
    <label>C.I.F</label>
    <length>255</length>
    <type>Text</type>
</CustomField>