force-app/main/default/objects/Sample_Lab_Request__c/fields/Charge_To__c.field-meta.xml
<CustomField>
    <fullName>Charge_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Lab_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>