force-app/main/default/objects/Sample_Lab_Request__c/fields/Charge_To_text__c.field-meta.xml
<CustomField>
    <fullName>Charge_To_text__c</fullName>
    <label>Charge To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>