force-app/main/default/objects/Sample_Lab_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact/Attention To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sample/Drawdown Requests</relationshipLabel>
    <relationshipName>Sample_Lab_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>