force-app/main/default/objects/Sample_Lab_Request__c/fields/Custom_Letter__c.field-meta.xml
<CustomField>
    <fullName>Custom_Letter__c</fullName>
    <label>Custom Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>