force-app/main/default/objects/Sample_Lab_Request__c/fields/Custom_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Message__c</fullName>
    <label>Message to Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>