force-app/main/default/objects/Sample_Lab_Request__c/fields/Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notes__c</fullName>
    <label>Internal FLEXcon Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>