force-app/main/default/objects/Sample_Lab_Request__c/fields/Customer_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_Address__c</fullName>
    <formula>Account__r.ShippingStreet &amp; BR() &amp; Account__r.ShippingCity &amp; &quot;, &quot; &amp; Account__r.ShippingState &amp; 
BR() &amp; Account__r.ShippingCountry &amp; &quot; &quot; &amp; Account__r.ShippingPostalCode</formula>
    <label>Customer Shipping Address</label>
    <type>Text</type>
</CustomField>