force-app/main/default/objects/Sample_Lab_Request__c/fields/Customer_UPS_FedEx__c.field-meta.xml
<CustomField>
    <fullName>Customer_UPS_FedEx__c</fullName>
    <label>Customer UPS/FedEx #:</label>
    <length>100</length>
    <type>Text</type>
</CustomField>