force-app/main/default/objects/Sample_Lab_Request__c/fields/Other_instructions__c.field-meta.xml
<CustomField>
    <fullName>Other_instructions__c</fullName>
    <inlineHelpText>Please fill when &quot;Other instructions&quot; value is chosen</inlineHelpText>
    <label>Other instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>