force-app/main/default/objects/Sample_Lab_Request__c/fields/Please_label_all_sample_sheets__c.field-meta.xml
<CustomField>
    <fullName>Please_label_all_sample_sheets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Please label all sample sheets</label>
    <type>Checkbox</type>
</CustomField>