force-app/main/default/objects/Sample_Lab_Request__c/fields/PPD__c.field-meta.xml
<CustomField>
    <fullName>PPD__c</fullName>
    <label>PPD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>