force-app/main/default/objects/Sample_Lab_Request__c/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx - Ground</fullName>
                <default>true</default>
                <label>FedEx - Ground</label>
            </value>
            <value>
                <fullName>FedEx - 2 Day</fullName>
            </value>
            <value>
                <fullName>FedEx - Express Saver (3 Day)</fullName>
            </value>
            <value>
                <fullName>FedEx - First Overnight (by 8:00 AM)</fullName>
            </value>
            <value>
                <fullName>FedEx - Ground (Canada Only)</fullName>
            </value>
            <value>
                <fullName>FedEx - International Economy</fullName>
            </value>
            <value>
                <fullName>FedEx - International Priority</fullName>
            </value>
            <value>
                <fullName>FedEx - Overnight Priority (AM - by noon)</fullName>
            </value>
            <value>
                <fullName>FedEx - Standard Overnight (by 3:00 PM)</fullName>
            </value>
            <value>
                <fullName>FLEXcon BV / Air-shipment</fullName>
            </value>
            <value>
                <fullName>FLEXcon BV / Container</fullName>
            </value>
            <value>
                <fullName>FLEXcon Canada / Truck</fullName>
            </value>
            <value>
                <fullName>FLEXcon Glenrothes / Air-shipment</fullName>
            </value>
            <value>
                <fullName>FLEXcon Glenrothes / Container</fullName>
            </value>
            <value>
                <fullName>Inter-Office Mail</fullName>
            </value>
            <value>
                <fullName>UPS - 2 Day Air</fullName>
            </value>
            <value>
                <fullName>UPS - 3 Day Air - Select</fullName>
            </value>
            <value>
                <fullName>UPS - Expedited (Foreign)</fullName>
            </value>
            <value>
                <fullName>UPS - Express (Foreign)</fullName>
            </value>
            <value>
                <fullName>UPS - Ground Residential</fullName>
            </value>
            <value>
                <fullName>UPS - Next Day Air - Early AM</fullName>
            </value>
            <value>
                <fullName>UPS - Next Day Air - Saver (after noon)</fullName>
            </value>
            <value>
                <fullName>UPS - Next Day Air - (before noon)</fullName>
            </value>
            <value>
                <fullName>UPS - Standard (Foreign - Canada Only)</fullName>
            </value>
            <value>
                <fullName>UPS Ground -Com</fullName>
            </value>
            <value>
                <fullName>US Postal Service - First Class</fullName>
            </value>
            <value>
                <fullName>Will Pick Up</fullName>
            </value>
            <value>
                <fullName>Sample - Inter-mail Office 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>