force-app/main/default/objects/Sample_Lab_Request__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Requested by the team to track special instructions</description>
    <label>Special Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add sample coming from lab</fullName>
            </value>
            <value>
                <fullName>Add sample coming from business team</fullName>
            </value>
            <value>
                <fullName>Add customized letter being sent via interoffice/email</fullName>
            </value>
            <value>
                <fullName>Add business card</fullName>
            </value>
            <value>
                <fullName>Other instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>