force-app/main/default/objects/Sample_Lab_Request__c/fields/Total_Price_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Rollup__c</fullName>
    <label>Total Price Rollup</label>
    <summarizedField>Sample_Lab_Request_Products__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Sample_Lab_Request_Products__c.Sample_Lab_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>