force-app/main/default/objects/Sample_Lab_Request__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>Sample_Lab_Request_Products__c.Quantity__c</summarizedField>
    <summaryForeignKey>Sample_Lab_Request_Products__c.Sample_Lab_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>