force-app/main/default/objects/Sample_Lab_Request__c/fields/Total_Weight_In_Lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_In_Lbs__c</fullName>
    <label>Total Weight In Lbs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>