force-app/main/default/objects/Sample_Lab_Request__c/fields/Tracking_Info__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Info__c</fullName>
    <label>Tracking Info.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>