force-app/main/default/objects/Sample_Lab_Request__c/fields/TrackingInfo__c.field-meta.xml
<CustomField>
    <fullName>TrackingInfo__c</fullName>
    <label>Tracking Info</label>
    <length>30</length>
    <type>Text</type>
</CustomField>