force-app/main/default/objects/Sample_Lab_Request__c/recordTypes/Lab_Request.recordType-meta.xml
<RecordType>
    <fullName>Lab_Request</fullName>
    <active>true</active>
    <label>Lab Drawdown Request</label>
</RecordType>