force-app/main/default/objects/Sample_Lab_Request__c/recordTypes/Sample_Requests.recordType-meta.xml
<RecordType>
    <fullName>Sample_Requests</fullName>
    <active>true</active>
    <label>Sample Requests</label>
</RecordType>