force-app/main/default/objects/Sample_Lab_Request__c/listViews/Closed_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>Closed_Sample_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inter-Company Delivery Completed,Shipped</value>
    </filters>
    <label>Closed - Sample Requests</label>
    <queue>Sample_Requests_Queue</queue>
</ListView>