force-app/main/default/objects/Sample_Lab_Request__c/listViews/Lab_Request_Queue_Sample_Lab_Request.listView-meta.xml
<ListView>
    <fullName>Lab_Request_Queue_Sample_Lab_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Lab Request Queue</label>
    <queue>Lab_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>