force-app/main/default/objects/Sample_Lab_Request__c/listViews/Open_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Sample_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>Open - Sample Requests</label>
    <queue>Sample_Requests_Queue</queue>
</ListView>