force-app/main/default/objects/Sample_Lab_Request__c/listViews/Sample_Requests_Queue_Sample_Lab_Request.listView-meta.xml
<ListView>
    <fullName>Sample_Requests_Queue_Sample_Lab_Request</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Attention_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>Sample Requests Queue</label>
    <queue>Sample_Requests_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>